tests/baselines/reference/parserMemberFunctionDeclaration2.errors.txt
parserMemberFunctionDeclaration2.ts(2,12): error TS1434: Unexpected keyword or identifier.


==== parserMemberFunctionDeclaration2.ts (1 errors) ====
    class C {
        static static Foo() { }
               ~~~~~~
!!! error TS1434: Unexpected keyword or identifier.
    }